// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlgebraBasePluginV1 #DynamicFeeManager #adaptiveFee single huge spike after day 1`] = `
Array [
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 124 ",
  "Fee: 124 ",
  "Fee: 124 ",
  "Fee: 124 ",
  "Fee: 100 ",
]
`;

exports[`AlgebraBasePluginV1 #DynamicFeeManager #adaptiveFee single huge spike after initialization 1`] = `
Array [
  "Fee: 3714 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 2965 ",
  "Fee: 2602 ",
  "Fee: 1733 ",
  "Fee: 995 ",
  "Fee: 607 ",
  "Fee: 411 ",
  "Fee: 309 ",
  "Fee: 250 ",
  "Fee: 215 ",
  "Fee: 191 ",
  "Fee: 174 ",
  "Fee: 163 ",
  "Fee: 154 ",
  "Fee: 147 ",
  "Fee: 142 ",
  "Fee: 139 ",
  "Fee: 135 ",
  "Fee: 132 ",
  "Fee: 130 ",
  "Fee: 128 ",
  "Fee: 126 ",
  "Fee: 100 ",
]
`;

exports[`AlgebraBasePluginV1 #DynamicFeeManager #adaptiveFee single huge step after day 1`] = `
Array [
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 100 ",
]
`;

exports[`AlgebraBasePluginV1 #DynamicFeeManager #adaptiveFee single huge step after initialization 1`] = `
Array [
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 14311 ",
  "Fee: 11402 ",
  "Fee: 7651 ",
  "Fee: 5386 ",
  "Fee: 4312 ",
  "Fee: 3795 ",
  "Fee: 3525 ",
  "Fee: 3371 ",
  "Fee: 3277 ",
  "Fee: 3216 ",
  "Fee: 3174 ",
  "Fee: 3144 ",
  "Fee: 3123 ",
  "Fee: 3106 ",
  "Fee: 3093 ",
  "Fee: 3083 ",
  "Fee: 3075 ",
  "Fee: 3068 ",
  "Fee: 3062 ",
  "Fee: 3058 ",
  "Fee: 3037 ",
]
`;

exports[`AlgebraBasePluginV1 AlgebraBasePluginV1 external methods #changeFeeConfiguration feeConfig getter gas cost [ @skip-on-coverage ] 1`] = `23713`;
